<resources>
    <string name="app_name">Area Calculator</string>
    <string name="length_1">Length 1</string>
    <string name="length_2">Length 2</string>
    <string name="calculate_str">Calculate</string>
    <string name="clear_string">Clear</string>
    <string name="triangle_description">This is a triangle</string>
    <string name="square_description">This is a square</string>
    <string name="circle_description">This is a circle</string>
    <string name="tv1_description">Choose a shape</string>
    <string name="tv1_shape">Choose a shape</string>
</resources>
